NetworkManager-1.14 (not released yet)
Overview of changes since NetworkManager-1.12
=============================================

This is a snapshot of NetworkManager 1.14 development series.
The API is subject to change and not guaranteed to be compatible
with the later release.
USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!

* Added support for IEEE 802.15.4 and 6LowPAN devices.

The following changes were backported to 1.12.x releases between 1.12.0
and 1.12.2 are also present in NetworkManager-1.14:

* fix missing symbols in libnm ABI for settings.

=============================================
NetworkManager-1.12
Overview of changes since NetworkManager-1.10
=============================================

This is a new stable release of NetworkManager.  Notable changes include:

* Improved support for configuration checkpoint, including support in libnm.
* Added capability to set IP Tunnel configuration flags.
* The systemd-resolved DNS plugins now supports MDNS.
* systemd-resolved and dnsmasq DNS plugins now honor the DNS priority setting.
* Wi-Fi devices now support FILS for speedier roaming support.
* Drop dependency on libnl3 library.
* Add support for "onlink" routes.
* More robust connectivity checking.
* Dropped the obsolete "ifnet" settings plugin,
* Try harder to generate reasonable human-readable names for devices even if
  the hwdb contains garbage.
* Add an "overview" option to hide default values in nmcli, resulting in more
  concise output.
* Reworked the inner workings of D-Bus interface for better resource efficiency.
* Add support for configuring nmcli coloring via terminal-colors.d(5).
* Added experimental support for Meson build system,
* Added initial IWD Wi-Fi daemon support.
* A non-hexadecimal DHCPv4 client-id is now properly passed to
  dhclient with the first byte (type) set to zero, as stated in the
  documentation. This represents a change in behavior since previous