@@ -9,6 +9,8 @@ with the later release.
 USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 
 * Added support for IEEE 802.15.4 and 6LowPAN devices.
+* Support activating profile multiple times via connection.connect-multiple
+  setting.
 
 The following changes were backported to 1.12.x releases between 1.12.0
 and 1.12.2 are also present in NetworkManager-1.14:
